--- a/templates/admin/parent_category/_form.html.twig
+++ b/templates/admin/parent_category/_form.html.twig
@@ -1,4 +1,7 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <div class="btn-group">
+        <a class="btn btn-dark" href="{{ path('admin_parent_category_index') }}">back to list</a>
+        <button class="btn btn-primary">{{ button_label|default('Save') }}</button>
+    </div>
 {{ form_end(form) }}
