--- a/templates/client/edit-password.html.twig
+++ b/templates/client/edit-password.html.twig
@@ -17,11 +17,17 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-header">
-                            <p class="p-0 m-0 ">Edit Client</p>
+                            <p class="p-0 m-0 ">{{'Edit Password'|trans}}</p>
                         </div>
                         <div class="card-body">
-                            {{ include('client/_form.html.twig', {'button_label': 'Update'}) }}
-    {# {{ include('client/_delete_form.html.twig') }} #}
+                            {{ form_start(form) }}
+                                {{ form_widget(form) }}
+                                <div class="btn-group">
+                                    <a class="btn btn-dark text-white" href="{{ path('client_index') }}">{{'back'|trans}}</a>
+                                    
+                                    <button class="btn btn-success">{{ button_label|default('Save') }}</button>
+                                </div>
+                            {{ form_end(form) }}
                         </div>
                     </div>
                 </div>
