--- a/templates/macros/search.html.twig
+++ b/templates/macros/search.html.twig
@@ -19,7 +19,7 @@
                     <div class="col-md-8 col-12">
                     {{ form_row(form.mots)}}
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 col-12">
                         <button class="btn w-100 btn-primary">{% trans %}Search{% endtrans %} <i class="fa fa-search-plus" aria-hidden="true"></i> </button>
                     </div>
                 </div>
