--- a/templates/client/adresse/index.html.twig
+++ b/templates/client/adresse/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'lesekoya/base.html.twig' %}
+{% import "macros/alertes.html.twig" as alertes %}
 
-{% block title %}Edit profil{% endblock %}
+{% block title %}Client {% endblock %}
 
 {% block body %}
 <ol class="breadcrumb">
@@ -8,20 +9,22 @@
     <li class="breadcrumb-item"><a href="{{ path('client_index') }}">{{'Customer'|trans}}</a></li>
     <li class="breadcrumb-item active">{{'Cart'|trans}}</li>
 </ol>
+{% for item in app.flashes('success') %}
+    {{ alertes.alert(item,'success') }}
+{% endfor %}
 <div class="container-fluid">
 
     <div class="row my-5">
         {% include "client/nav.html.twig" %}
         <div class="col-lg-8 div-primary">
             <div class="row">
-                <div class="col-12">
+                <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <p class="p-0 m-0 ">Edit Client</p>
+                            <p class="p-0 m-0 ">Mes adresses</p>
                         </div>
                         <div class="card-body">
-                            {{ include('client/_form.html.twig', {'button_label': 'Update'}) }}
-    {# {{ include('client/_delete_form.html.twig') }} #}
+                            
                         </div>
                     </div>
                 </div>
@@ -29,4 +32,13 @@
         </div>
     </div>
 </div>
+
+{% endblock %}
+
+{% block javascripts %}
+<script>
+    $(document).ready(function () {
+        $('.my-adresse').addClass('active')
+    })
+</script>
 {% endblock %}
