--- a/templates/client/buy/index.html.twig
+++ b/templates/client/buy/index.html.twig
@@ -12,57 +12,65 @@
 {% block title %}Achat | {{app_name}} {% endblock %}
 
 {% block head %}
-  {{ head.dataTable() }}
+{{ head.dataTable() }}
 {% endblock %}
 
 {% block body %}
 <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="{{ path('home') }}">Home</a></li>
-    <li class="breadcrumb-item"><a href="{{ path('client_buy') }}">Mes achats</a></li>
-    <li class="breadcrumb-item active">Achat</li>
+    <li class="breadcrumb-item"><a href="{{ path('client_index') }}">{{'Client'|trans}}</a></li>
+    <li class="breadcrumb-item active">{{'My buys'|trans}}</li>
 </ol>
-<div class="container">
+<div class="container-fluid">
     <div class="row my-5">
-            {% include "client/nav.html.twig" %}
+        {% include "client/nav.html.twig" %}
         <div class="col-lg-9 mb-3 div-primary">
             <div class="card card-primary border-0">
-            <div class="card-header bg-white">Buy</div>
+                <div class="card-header bg-white">Buy</div>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-lg-12">
                             {% for item in app.user.client.articleBuys %}
                             <div class="card card-body mb-3">
-                                <div class="media align-items-center align-items-lg-start text-center text-lg-left flex-column flex-lg-row">
-                                    <div class="mr-2 mb-3 mb-lg-0"> 
+                                <div
+                                    class="media align-items-center align-items-lg-start text-center text-lg-left flex-column flex-lg-row">
+                                    <div class="mr-2 mb-3 mb-lg-0">
                                         {% for item in item.article.images|slice(0,1) %}
-                                            <img src="{{ asset('img/article/' ~ item.name ) }}" width="150" height="150" alt=""> 
+                                        <img src="{{ asset('img/article/' ~ item.name ) }}" width="150" height="150"
+                                            alt="">
                                         {% else %}
-                                            <img src="{{ asset('img/vide.png') }}" width="150" height="150" alt=""> 
+                                        <img src="{{ asset('img/vide.png') }}" width="150" height="150" alt="">
                                         {% endfor %}
                                     </div>
                                     <div class="media-body">
-                                        <h6 class="media-title font-weight-semibold"> <a href="#" data-abc="true">{{ item.article.title }}</a> </h6>
+                                        <h6 class="media-title font-weight-semibold"> <a href="#" data-abc="true">{{
+                                                item.article.title }}</a> </h6>
                                         <ul class="list-inline list-inline-dotted mb-3 mb-lg-2">
-                                            <li class="list-inline-item"><a href="#" class="text-muted" data-abc="true">{{ item.article.category.title }}</a></li>
-                                            {# <li class="list-inline-item"><a href="#" class="text-muted" data-abc="true">Mobiles</a></li> #}
+                                            <li class="list-inline-item"><a href="#" class="text-muted"
+                                                    data-abc="true">{{ item.article.category.title }}</a></li>
+                                            {# <li class="list-inline-item"><a href="#" class="text-muted"
+                                                    data-abc="true">Mobiles</a></li> #}
                                         </ul>
                                         <p class="mb-3">{{ item.article.description }} </p>
                                         <ul class="list-inline list-inline-dotted mb-0">
-                                            <li class="list-inline-item">All items from <a href="#" data-abc="true">{{ item.article.category.title }}</a></li>
-                                            {# <li class="list-inline-item">Add to <a href="#" data-abc="true">wishlist</a></li> #}
+                                            <li class="list-inline-item">All items from <a href="#" data-abc="true">{{
+                                                    item.article.category.title }}</a></li>
+                                            {# <li class="list-inline-item">Add to <a href="#"
+                                                    data-abc="true">wishlist</a></li> #}
                                         </ul>
                                     </div>
                                     <div class="mt-3 mt-lg-0 ml-lg-3 text-center">
-                                        <h3 class="mb-0 font-weight-semibold">{{ item.article.price|number_format(0,'.',' ') }} {{ site.current }}</h3>
-                                        <div> 
-                                            <i class="fa fa-star"></i> 
-                                            <i class="fa fa-star"></i> 
-                                            <i class="fa fa-star"></i> 
-                                            <i class="fa fa-star"></i> 
+                                        <h3 class="mb-0 font-weight-semibold">{{
+                                            item.article.price|number_format(0,'.',' ') }} {{ site.current }}</h3>
+                                        <div>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
                                         </div>
                                         <div class="text-muted">1985 reviews</div>
                                         {# <button type="button" class="btn btn-warning mt-4 text-white">
-                                            <i class="icon-cart-add mr-2"></i> 
+                                            <i class="icon-cart-add mr-2"></i>
                                             Add to cart
                                         </button> #}
                                     </div>
@@ -72,7 +80,7 @@
                         </div>
                     </div>
                 </div>
-            <!-- /.card -->
+                <!-- /.card -->
             </div>
         </div>
     </div>
@@ -84,14 +92,14 @@
 {% endblock %}
 
 {% block javascripts %}
-{{ table.jsDataTable('datatable_1') }} 
-{{ table.jsDataTable('datatable_2') }} 
-{{ table.jsDataTable('datatable_3') }} 
-{{ table.jsDataTable('datatable_4') }} 
-{{ table.jsDataTable('datatable_5') }} 
-    <script>
-        $(document).ready(function(){
-            $('.my-achat').addClass('active')
-        })
-    </script>
+{{ table.jsDataTable('datatable_1') }}
+{{ table.jsDataTable('datatable_2') }}
+{{ table.jsDataTable('datatable_3') }}
+{{ table.jsDataTable('datatable_4') }}
+{{ table.jsDataTable('datatable_5') }}
+<script>
+    $(document).ready(function () {
+        $('.my-achat').addClass('active')
+    })
+</script>
 {% endblock %}
