--- a/templates/client/confirmation.html.twig
+++ b/templates/client/confirmation.html.twig
@@ -4,7 +4,7 @@
 {% extends "leSekoya/base.html.twig" %}
 
 
-{% block title %} {{'Order confirmation'|trans }} {% endblock %}
+{% block title %} {{'Order confirmation'|trans }} - {{ order.number }} {% endblock %}
 
 {% block body %}
 <style>
@@ -33,7 +33,7 @@
                 <table class="order-rable">
                     <tbody>
                         <tr>
-                            <td>Order number</td>
+                            <td>{{'Order number'|trans}}</td>
                             <td>: {{ order.number}}</td>
                         </tr>
                         <tr>
@@ -69,46 +69,23 @@
                 <td>: {{ (order.deliverySpace)? order.deliverySpace.street.city.country.name:'non definie' }}</td>
                 </tr>
                 <tr>
-                    <td>Postcode</td>
+                    <td>{{'Postal code'|trans}}</td>
                     <td>: 11000</td>
                 </tr>
             </tbody>
             </table>
             </div>
         </div>
-        {# <div class="col-md-6 col-xl-4 mb-4 mb-xl-0">
-            <div class="confirmation-card">
-            <h3 class="billing-title">Shipping Address</h3>
-            <table class="order-rable">
-                <tbody><tr>
-                <td>Street</td>
-                <td>: 56/8 panthapath</td>
-                </tr>
-                <tr>
-                <td>City</td>
-                <td>: Dhaka</td>
-                </tr>
-                <tr>
-                <td>Country</td>
-                <td>: Bangladesh</td>
-                </tr>
-                <tr>
-                <td>Postcode</td>
-                <td>: 1205</td>
-                </tr>
-            </tbody></table>
-            </div>
-        </div> #}
         </div>
         <div class="order_details_table">
-        <h2>Order Details</h2>
+        <h2>{{'Order Details'|trans}}</h2>
         <div class="table-responsive">
             <table class="table">
             <thead>
                 <tr>
-                <th scope="col">Product</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Total</th>
+                <th scope="col">{{'Product'|trans}}</th>
+                <th scope="col">{{'Quantity'|trans}}</th>
+                <th scope="col">{{'Total'|trans}}</th>
                 </tr>
             </thead>
             <tbody>
@@ -138,13 +115,13 @@
                 </tr>
                 <tr>
                 <td>
-                    <h4>Shipping</h4>
+                    <h4>{{'Shipping'|trans}}</h4>
                 </td>
                 <td>
                     <h5></h5>
                 </td>
                 <td>
-                    <p>Flat rate: {{ (order.deliverySpace)? order.deliverySpace.street.shippingAmount.amount:'0' |number_format(2,'.',' ') }} {{ site.current }}</p>
+                    <p>{{ (order.deliverySpace)? order.deliverySpace.street.shippingAmount.amount:'0' |number_format(2,'.',' ') }} {{ site.current }}</p>
                 </td>
                 </tr>
                 <tr>
