--- a/templates/client/nav.html.twig
+++ b/templates/client/nav.html.twig
@@ -2,15 +2,15 @@
     <div class="card card-outline border-0 card-primary">
         <div class="card-bod">
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action rounded my-account border-0">
-                    <a href="{{ path('client_index') }}"><i class="fa fa-user"></i> {% trans %}My account{% endtrans %}</a>
-                </button>
-                <button type="button" class="list-group-item list-group-item-action my-orders rounded border-0">
-                    <a href="{{ path('client_order') }}"><i class="ml-1 fas fa-box-open"></i> {% trans %}My orders{% endtrans %}</a>
-                </button>
-                <button type="button" class="list-group-item list-group-item-action my-achat border-0 rounded">
-                    <a href="{{ path('client_buy') }}"><i class="ml-1 fas fa-box-open"></i> {{'My buy'|trans}}</a>
-                </button>
+                <a href="{{ path('client_index') }}" class="list-group-item list-group-item-action rounded my-account border-0">
+                    <i class="fa fa-user"></i> {% trans %}My account{% endtrans %}
+                </a>
+                <a href="{{ path('client_order') }}" class="list-group-item list-group-item-action my-orders rounded border-0">
+                    <i class="ml-1 fas fa-box-open"></i> {% trans %}My orders{% endtrans %}
+                </a>
+                <a href="{{ path('client_buy') }}" class="list-group-item list-group-item-action my-achat border-0 rounded">
+                    <i class="ml-1 fas fa-box-open"></i> {{'My buys'|trans}}
+                </a>
             </div>
             <hr>
             <div class="list-group">
