--- a/templates/client/order/index.html.twig
+++ b/templates/client/order/index.html.twig
@@ -16,50 +16,58 @@
 {% endblock %}
 
 {% block body %}
+<style>
+    .card-header{
+        background-color:transparent;
+    }
+</style>
 <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="{{ path('home') }}">{{'Home'|trans}}</a></li>
     <li class="breadcrumb-item"><a href="{{ path('client_order') }}">{{'Customer'|trans}}</a></li>
-    <li class="breadcrumb-item active">{{'My account'|trans}}</li>
+    <li class="breadcrumb-item active">{{'My orders'|trans}}</li>
 </ol>
-<div class="container">
+<div class="container-fluid">
     <div class="row my-5">
         {% include "client/nav.html.twig" %}
-        <div class="col-lg-9 div-primary">
-            <div class="card card-primary card-outline card-tabs">
+        <div class="col-md-9 col-12 div-primary">
+            <div class="card card-primary border-0 card-outline card-tabs">
+                <div class="card-header bg-white">
+                    <p class="p-0 m-0 h4">{{ 'My orders'|trans }}</p>    
+                </div>
                 <div class="card-header p-0 pt-1 border-bottom-0">
                     <ul class="nav nav-tabs" id="custom-tabs-three-tab" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link active" id="custom-tabs-three-home-tab" data-toggle="pill"
                                 href="#custom-tabs-three-home" role="tab" aria-controls="custom-tabs-three-home"
-                                aria-selected="true">Tous (<span class="font-weight-bold">
+                                aria-selected="true">{{'All'|trans}} (<span class="font-weight-bold">
                                     {{ orders| length }}
                                 </span>)</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill"
                                 href="#order-en-attente" role="tab" aria-controls="custom-tabs-three-profile"
-                                aria-selected="false">Waiting (<span class="font-weight-bold">
+                                aria-selected="false">{{'Waiting'|trans}} (<span class="font-weight-bold">
                                     {{ ordersWaiting| length }}
                                 </span>)</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill"
                                 href="#order-in-progress" role="tab" aria-controls="custom-tabs-three-profile"
-                                aria-selected="false">In progress (<span class="font-weight-bold">
+                                aria-selected="false">{{'In progress'|trans}} (<span class="font-weight-bold">
                                     {{ ordersInProgress| length }}
                                 </span>)</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill"
                                 href="#order-canceled" role="tab" aria-controls="custom-tabs-three-profile"
-                                aria-selected="false">Canceled (<span class="font-weight-bold">
+                                aria-selected="false">{{'Canceled'|trans}} (<span class="font-weight-bold">
                                     {{ ordersCanceled| length }}
                                 </span>)</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill"
                                 href="#order-completed" role="tab" aria-controls="custom-tabs-three-profile"
-                                aria-selected="false">Completed (<span class="font-weight-bold">
+                                aria-selected="false">{{'Completed'|trans}} (<span class="font-weight-bold">
                                     {{ ordersCompleted| length }}
                                 </span>)</a>
                         </li>
