--- a/templates/dev.html.twig
+++ b/templates/dev.html.twig
@@ -9,14 +9,14 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{{ asset('vendor/bootstrap/css/bootstrap.min.css')}}">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="{{ asset('fonts/font-awesome-4.7.0/css/font-awesome.min.css') }}">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+	<link rel="stylesheet" type="text/css" href="{{ asset('vendor/animate/animate.css') }}">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+	<link rel="stylesheet" type="text/css" href="{{ asset('vendor/select2/select2.min.css') }}">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util-maintenance.css">
-	<link rel="stylesheet" type="text/css" href="css/main-maintenance.css">
+	<link rel="stylesheet" type="text/css" href="{{ asset('css/util-maintenance.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ asset('css/main-maintenance.css') }}">
 <!--===============================================================================================-->
 </head>
 <body>
@@ -47,7 +47,7 @@
 
 		<div class="flex-col-c w-full p-t-50 p-b-80">
 			<h3 class="l1-txt1 txt-center p-b-10">
-                {{app_name }} </br>
+                {{ app_name }} </br>
 				{{'Coming Soon'|trans}}
 			</h3>
 			<p class="txt-center l1-txt2 p-b-43 wsize2">
@@ -66,17 +66,17 @@
 	
 
 <!--===============================================================================================-->	
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="{{ asset('vendor/jquery/jquery-3.2.1.min.js') }}"></script>
 <!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="{{ asset('vendor/bootstrap/js/popper.js') }}"></script>
+	<script src="{{ asset('vendor/bootstrap/js/bootstrap.min.js') }}"></script>
 <!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
+	<script src="{{ asset('vendor/select2/select2.min.js') }}"></script>
 <!--===============================================================================================-->
-	<script src="vendor/countdowntime/moment.min.js"></script>
-	<script src="vendor/countdowntime/moment-timezone.min.js"></script>
-	<script src="vendor/countdowntime/moment-timezone-with-data.min.js"></script>
-	<script src="vendor/countdowntime/countdowntime.js"></script>
+	<script src="{{ asset('vendor/countdowntime/moment.min.js') }}"></script>
+	<script src="{{ asset('vendor/countdowntime/moment-timezone.min.js') }}"></script>
+	<script src="{{ asset('vendor/countdowntime/moment-timezone-with-data.min.js') }}"></script>
+	<script src="{{ asset('vendor/countdowntime/countdowntime.js') }}"></script>
 	<script>
 		$('.cd100').countdown100({
 			// Set Endtime here
@@ -93,14 +93,14 @@
 		});
 	</script>
 <!--===============================================================================================-->
-	<script src="vendor/tilt/tilt.jquery.min.js"></script>
+	<script src="{{ asset('vendor/tilt/tilt.jquery.min.js') }}"></script>
 	<script >
 		$('.js-tilt').tilt({
 			scale: 1.1
 		})
 	</script>
 <!--===============================================================================================-->
-	<script src="js/main.js"></script>
+	<script src="{{ asset('js/main.js') }}"></script>
 
 </body>
 </html>
