--- a/templates/leSekoya/base.html.twig
+++ b/templates/leSekoya/base.html.twig
@@ -22,6 +22,123 @@
     .bg-1 {
       background: #01796F;
     }
+    .mobile{
+      display: none;
+    }
+    @media (max-width: 992px) {
+      .desktop{
+        display:none
+      }
+
+      .mobile{
+        display: initial;
+      }
+    }
+    .payment-info {
+    background: blue;
+    padding: 10px;
+    border-radius: 6px;
+    color: #fff;
+    font-weight: bold
+}
+
+.product-details {
+    padding: 10px
+}
+
+.cart {
+    background: #fff
+}
+
+.p-about {
+    font-size: 12px
+}
+
+.table-shadow {
+    -webkit-box-shadow: 5px 5px 15px -2px rgba(0, 0, 0, 0.42);
+    box-shadow: 5px 5px 15px -2px rgba(0, 0, 0, 0.42)
+}
+
+.type {
+    font-weight: 400;
+    font-size: 10px
+}
+
+label.radio {
+    cursor: pointer
+}
+
+label.radio input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    pointer-events: none
+}
+
+label.radio span {
+    padding: 1px 12px;
+    border: 2px solid #ada9a9;
+    display: inline-block;
+    color: #8f37aa;
+    border-radius: 3px;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 300
+}
+
+label.radio input:checked+span {
+    border-color: #fff;
+    background-color: blue;
+    color: #fff
+}
+
+.credit-inputs {
+    background: rgb(102, 102, 221);
+    color: #fff !important;
+    border-color: rgb(102, 102, 221)
+}
+
+.credit-inputs::placeholder {
+    color: #fff;
+    font-size: 13px
+}
+
+.credit-card-label {
+    font-size: 9px;
+    font-weight: 300
+}
+
+.form-control.credit-inputs:focus {
+    background: rgb(102, 102, 221);
+    border: rgb(102, 102, 221)
+}
+
+.line {
+    border-bottom: 1px solid rgb(102, 102, 221)
+}
+
+.information span {
+    font-size: 12px;
+    font-weight: 500
+}
+
+.information {
+    margin-bottom: 5px
+}
+
+.items {
+    -webkit-box-shadow: 5px 5px 4px -1px rgba(0, 0, 0, 0.25);
+    box-shadow: 5px 5px 4px -1px rgba(0, 0, 0, 0.08)
+}
+
+.spec {
+    font-size: 11px
+}
+.list-group-item.active{
+  background-color: #01796F!important;
+  color: #fff!important;
+}
   </style>
 </head>
 
@@ -55,24 +172,15 @@
                   Contact
                 </a>
               </li>
-              <li class="nav-item submenu dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false">LeSekoya</a>
-                <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">{{ 'Login'|trans }}</a></li>
-                  <li class="nav-item"><a class="nav-link" href="{{ path('app_register') }}">{{ 'Register'|trans }}</a>
-                  </li>
-                  <li class="nav-item"><a class="nav-link" href="tracking-order.html">{{ 'Tracking'|trans }}</a></li>
-                </ul>
-              </li>
               {% if is_granted('ROLE_EDITOR') %}
               <li class="nav-item submenu dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false">Manage</a>
+                  aria-expanded="false">{{'Manage'|trans}}</a>
                 <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="nav-link" href="{{ path('admin') }}">Dashbord</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{{ path('admin') }}">{{'Dashbord'|trans}}</a></li>
                   <li class="nav-item"><a class="nav-link" href="{{ path('article_index') }}">Articles</a></li>
-                  <li class="nav-item"><a class="nav-link" href="{{ path('order_index') }}">Order</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{{ path('category_index') }}">Category</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{{ path('order_index') }}">{{'Order'|trans}}</a></li>
                   <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_logout') }}">
                       <i class="fa fa-power-off text-danger" aria-hidden="true"></i>
@@ -85,15 +193,16 @@
               {% if is_granted('ROLE_CLIENT') %}
               <li class="nav-item submenu dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false"> <i class="fa fa-user" aria-hidden="true"></i> Hello {{
+                  aria-expanded="false"> <i class="fa fa-user" aria-hidden="true"></i> {{'Hello'|trans}} {{
                   app.user.personne.firstName}} </a>
                 <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="nav-link" href="{{ path('client_index') }}">Mon compte</a></li>
-                  <li class="nav-item"><a class="nav-link" href="{{ path('client_order') }}">Order</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{{ path('client_index') }}">{{'My account'|trans}}</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{{ path('client_order') }}">{{'Order'|trans}}</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{{ path('client_buy') }}">{{'My buy'|trans}}</a></li>
                   <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_logout') }}">
                       <i class="fa fa-power-off text-danger" aria-hidden="true"></i>
-                      Log out
+                     {{'Log out'|trans}}
                     </a>
                   </li>
                 </ul>
@@ -112,13 +221,12 @@
                   </button>
                 </a>
               </li>
-              {% if is_granted('ROLE_CLIENT') == null %}
+              {% if not is_granted('ROLE_CLIENT') %}
               <li class="nav-item">
                 <a href="{{ path('app_login') }}">
                   <button>
                     <i class="fas fa-user"></i>
-
-                    Se connecter
+                    {{'Log in'|trans}} / {{'Register'|trans}}
                   </button>
                 </a>
               </li>
