--- a/templates/macros/alertes.html.twig
+++ b/templates/macros/alertes.html.twig
@@ -1,5 +1,5 @@
 {% macro alert(message, type) %}
-<div class="alert alert-{{type}} alert-dismissible fade show" role="alert">
+<div class="alert alert-{{type|default('success')}} alert-dismissible fade show" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
