--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,11 +1,18 @@
-{% extends 'base.html.twig' %}
+{% extends 'leSekoya/base.html.twig' %}
 
-{% block title %}Password Reset Email Sent{% endblock %}
+{% block title %}{{'Password Reset Email Sent'|trans}}{% endblock %}
 
 {% block body %}
-    <p>
-        If an account matching your email exists, then an email was just sent that contains a link that you can use to reset your password.
-        This link will expire in {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
+<nav class="breadcrumb">
+   <a class="breadcrumb-item" href="/">{{'Home'|trans}}</a>
+   <span class="breadcrumb-item active">{{'check email'|trans}}</span>
+</nav>
+    <div class="container my-5">
+            <p>
+        {{'If an account matching your email exists, then an email was just sent that contains a link that you can use to reset your password.
+        This link will expire in'|trans}} {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
     </p>
-    <p>If you don't receive an email please check your spam folder or <a href="{{ path('app_forgot_password_request') }}">try again</a>.</p>
+    <p>{{"If you don't receive an email please check your spam folder or <a href='{{ path('app_forgot_password_request') }}'>try again</a>."|trans|raw}}</p>
+
+    </div>
 {% endblock %}
