--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -26,7 +26,12 @@
 
 </head>
 <style>
-
+.a1{
+  color:#000000eb !important;
+}
+.a1:hover{
+  color:#01796F !important;
+}
 #demo {
   height:100%;
   position:relative;
