--- a/templates/admin/order/index.html.twig
+++ b/templates/admin/order/index.html.twig
@@ -28,33 +28,15 @@
     ])}}
 {% endblock %}
 
-{% block title %}Order manage | {{ app_name }} {% endblock %}
+{% block title %}{{'Order manage'|trans}} | {{ app_name }} {% endblock %}
 
 
 
 {% block body %}
-
-{% for item in app.flashes('success') %}
-  {{ alerte.alert(item,'success')}}
-{% endfor %}
-
-
+    {% for item in app.flashes('success') %}
+    {{ alerte.alert(item,'success')}}
+    {% endfor %}
  <div class="row">
-    <div class="col-12 col-sm-6 col-md-3">
-        <div class="info-box mb-3">
-            <span class="info-box-icon bg-danger elevation-1"><i class="fas fa-thumbs-up"></i></span>
-
-            <div class="info-box-content">
-            <span class="info-box-text">Order unregister</span>
-            <span class="info-box-number"> {{ nbrOrders }} </span>
-            </div>
-            <!-- /.info-box-content -->
-        </div>
-            <!-- /.info-box -->
-    </div>
-    <div class="col-12">
-        {{link.add(path('order_new'),'Add order') }}
-    </div>
     <div class="col-12 col-sm-12">
         <div class="card card-primary card-outline card-tabs">
             <div class="card-header p-0 pt-1 border-bottom-0">
@@ -62,7 +44,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" id="custom-tabs-three-home-tab"
                             data-toggle="pill" href="#custom-tabs-three-home" role="tab"
-                            aria-controls="custom-tabs-three-home" aria-selected="true">{{'Tous'|trans}} (<span class="font-weight-bold"> 
+                            aria-controls="custom-tabs-three-home" aria-selected="true">{{'All'|trans}} (<span class="font-weight-bold"> 
                             {{ orders| length }}
                             </span>)</a>
                     </li>
@@ -102,6 +84,10 @@
                 </ul>
             </div>
             <div class="card-body">
+                <div class="mb-2">
+                    {{link.add(path('order_new'),'Add order') }}
+                </div>
+
                 <div class="tab-content" id="custom-tabs-three-tabContent">
                     <div class="tab-pane fade show active" id="custom-tabs-three-home"
                         role="tabpanel" aria-labelledby="custom-tabs-three-home-tab">
@@ -125,10 +111,13 @@
                             {{ include ("admin/order/_datatable.html.twig",{id:'5',orders: ordersCanceled}) }}
                     </div>
                 </div>
-            </div>
-            <!-- /.card -->
-            <div class="card-footer">
-                <a href="{{ path('admin') }}" class="btn btn-default">Back to dashboard <i class="fa fa-arrow-circle-left" aria-hidden="true"></i></a>
+                <div class="btn-group">
+                    <a href="{{ path('admin') }}" class="btn btn-dark"> 
+                        <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
+                        Back to dashboard
+                    </a>
+                </div>
+
             </div>
         </div>
     </div>
