--- a/templates/client/buy/index.html.twig
+++ b/templates/client/buy/index.html.twig
@@ -6,7 +6,7 @@
 {% import "macros/button.html.twig" as btn %}
 {% import "macros/link.html.twig" as link %}
 {% import "macros/search.html.twig" as search %}
-
+{% import "macros/dataTable.html.twig" as dataTable %}
 {% extends 'lesekoya/base.html.twig' %}
 
 {% block title %}Achat | {{app_name}} {% endblock %}
@@ -26,57 +26,43 @@
         {% include "client/nav.html.twig" %}
         <div class="col-lg-9 mb-3 div-primary">
             <div class="card card-primary border-0">
-                <div class="card-header bg-white">Buy</div>
+                <div class="card-header bg-white">{{'My buys'|trans}}</div>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-lg-12">
-                            {% for item in app.user.client.articleBuys %}
-                            <div class="card card-body mb-3">
-                                <div
-                                    class="media align-items-center align-items-lg-start text-center text-lg-left flex-column flex-lg-row">
-                                    <div class="mr-2 mb-3 mb-lg-0">
-                                        {% for item in item.article.images|slice(0,1) %}
-                                        <img src="{{ asset('img/article/' ~ item.name ) }}" width="150" height="150"
-                                            alt="">
-                                        {% else %}
-                                        <img src="{{ asset('img/vide.png') }}" width="150" height="150" alt="">
-                                        {% endfor %}
-                                    </div>
-                                    <div class="media-body">
-                                        <h6 class="media-title font-weight-semibold"> <a href="#" data-abc="true">{{
-                                                item.article.title }}</a> </h6>
-                                        <ul class="list-inline list-inline-dotted mb-3 mb-lg-2">
-                                            <li class="list-inline-item"><a href="#" class="text-muted"
-                                                    data-abc="true">{{ item.article.category.title }}</a></li>
-                                            {# <li class="list-inline-item"><a href="#" class="text-muted"
-                                                    data-abc="true">Mobiles</a></li> #}
-                                        </ul>
-                                        <p class="mb-3">{{ item.article.description }} </p>
-                                        <ul class="list-inline list-inline-dotted mb-0">
-                                            <li class="list-inline-item">All items from <a href="#" data-abc="true">{{
-                                                    item.article.category.title }}</a></li>
-                                            {# <li class="list-inline-item">Add to <a href="#"
-                                                    data-abc="true">wishlist</a></li> #}
-                                        </ul>
-                                    </div>
-                                    <div class="mt-3 mt-lg-0 ml-lg-3 text-center">
-                                        <h3 class="mb-0 font-weight-semibold">{{
-                                            item.article.price|number_format(0,'.',' ') }} {{ site.current }}</h3>
-                                        <div>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </div>
-                                        <div class="text-muted">1985 reviews</div>
-                                        {# <button type="button" class="btn btn-warning mt-4 text-white">
-                                            <i class="icon-cart-add mr-2"></i>
-                                            Add to cart
-                                        </button> #}
-                                    </div>
-                                </div>
-                            </div>
-                            {% endfor %}
+                            <table id="table-1" class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Produit</th>
+                                        <th>Prix et Quantité</th>
+                                        <th> Total</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for item in app.user.client.articleBuys %}
+                                    <tr>
+                                        <td>
+                                            {% for item in item.article.images|slice(0,1) %}
+                                            <img src="{{ asset('img/article/' ~ item.name ) }}" width="40">
+                                            {% else %}
+                                            <img src="{{ asset('img/vide.png') }}" width="40">
+                                            {% endfor %}
+                                            {{ item.article.title }}
+                                        </td>
+                                        <td>
+                                            {{ item.article.price|number_format(0,'.',' ') }} * {{item.quantity}}
+                                        </td>
+                                        <td>
+                                            {{item.quantity * item.price }}
+                                        </td>
+                                        <td>
+                                            <a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -92,11 +78,7 @@
 {% endblock %}
 
 {% block javascripts %}
-{{ table.jsDataTable('datatable_1') }}
-{{ table.jsDataTable('datatable_2') }}
-{{ table.jsDataTable('datatable_3') }}
-{{ table.jsDataTable('datatable_4') }}
-{{ table.jsDataTable('datatable_5') }}
+{{ table.jsDataTable('table-1') }}
 <script>
     $(document).ready(function () {
         $('.my-achat').addClass('active')
