--- a/templates/admin/order/index.html.twig
+++ b/templates/admin/order/index.html.twig
@@ -114,7 +114,7 @@
                 <div class="btn-group">
                     <a href="{{ path('admin') }}" class="btn btn-dark"> 
                         <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
-                        Back to dashboard
+                        {{'Back to dashboard'|trans}}
                     </a>
                 </div>
 
