--- a/templates/email/confirmation.html.twig
+++ b/templates/email/confirmation.html.twig
@@ -8,8 +8,8 @@
     {{'Please confirm your email address by clicking the following link'|trans}}:
     <br><br>
     {{'This link will expire in'|trans}}
-    {# <a style="color:#5F5F5F" href="{{ signedUrl|default('#') }}">Confirm my Email</a>. #}
-    {# {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}. #}
+    <a style="color:#5F5F5F" href="{{ signedUrl|default('#') }}">Confirmer mon Email</a>.
+    {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
 <p>
     {{'Cheers!'|trans}}
