--- a/templates/registration/register_1.html.twig
+++ b/templates/registration/register_1.html.twig
@@ -1,6 +1,6 @@
 {% extends 'lesekoya/base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}{{'Register'|trans}}{% endblock %}
 {% block head %}
     <!-- bs-stepper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css">
