--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,186 @@ body {
  font-weight:400;
  line-height:1.667
 }
+ 
+    .bg-1 {
+      background: #01796F;
+    }
+    .mobile{
+      display: none;
+    }
+    @media (max-width: 992px) {
+      .desktop{
+        display:none
+      }
+
+      .mobile{
+        display: initial;
+      }
+    }
+    .payment-info {
+    background: blue;
+    padding: 10px;
+    border-radius: 6px;
+    color: #fff;
+    font-weight: bold
+}
+
+.product-details {
+    padding: 10px
+}
+
+.cart {
+    background: #fff
+}
+
+.p-about {
+    font-size: 12px
+}
+
+.table-shadow {
+    -webkit-box-shadow: 5px 5px 15px -2px rgba(0, 0, 0, 0.42);
+    box-shadow: 5px 5px 15px -2px rgba(0, 0, 0, 0.42)
+}
+
+.type {
+    font-weight: 400;
+    font-size: 10px
+}
+
+label.radio {
+    cursor: pointer
+}
+
+label.radio input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    pointer-events: none
+}
+
+label.radio span {
+    padding: 1px 12px;
+    border: 2px solid #ada9a9;
+    display: inline-block;
+    color: #8f37aa;
+    border-radius: 3px;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 300
+}
+
+label.radio input:checked+span {
+    border-color: #fff;
+    background-color: blue;
+    color: #fff
+}
+
+.credit-inputs {
+    background: rgb(102, 102, 221);
+    color: #fff !important;
+    border-color: rgb(102, 102, 221)
+}
+
+.credit-inputs::placeholder {
+    color: #fff;
+    font-size: 13px
+}
+
+.credit-card-label {
+    font-size: 9px;
+    font-weight: 300
+}
+
+.form-control.credit-inputs:focus {
+    background: rgb(102, 102, 221);
+    border: rgb(102, 102, 221)
+}
+
+.line {
+    border-bottom: 1px solid rgb(102, 102, 221)
+}
+
+.information span {
+    font-size: 12px;
+    font-weight: 500
+}
+
+.information {
+    margin-bottom: 5px
+}
+
+.items {
+    -webkit-box-shadow: 5px 5px 4px -1px rgba(0, 0, 0, 0.25);
+    box-shadow: 5px 5px 4px -1px rgba(0, 0, 0, 0.08)
+}
+
+.spec {
+    font-size: 11px
+}
+.list-group-item.active{
+  background-color: #01796F!important;
+  color: #fff!important;
+}
+  @media (max-width: 991px) {
+    nav.categories ul ul{
+    position: absolute;
+    left: 25px;
+    min-width: 250px;
+    top: 0;
+    display: none;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, .1);
+    z-index: 99;
+    }
+  }
+  nav.categories {
+    width: 255px;
+  }
+
+  nav.categories ul ul {
+    position: absolute;
+    left: 255px;
+    min-width: 250px;
+    top: 0;
+    display: none;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, .1);
+    z-index: 99;
+  }
+
+  nav.categories ul span {
+    position: absolute;
+    right: 20px;
+    top: -5px;
+    font-size: 1.5em;
+  }
+
+  nav.categories ul li a {
+    font-size: 1.15em;
+    text-transform: capitalize;
+    padding: 10px 30px;
+    height: 50px;
+  }
+
+  nav.categories ul li {
+    border-bottom: 1px solid #ededed;
+    transition: all 0.4s linear;
+  }
+
+  nav.categories ul li:hover {
+    background: #01796F;
+  }
+
+  nav.categories ul .dropdown:hover {
+    background: #01796F
+  }
+
+  nav.categories ul .dropdown:hover ul {
+    display: initial;
+  }
 a{
   color: #000 !important;
 }
