--- a/templates/admin/profile/index.html.twig
+++ b/templates/admin/profile/index.html.twig
@@ -1,18 +1,16 @@
 {% import "macros/breadcrumb.html.twig" as utils %}
-{% import "/macros/image.html.twig" as image %}
+{% import "macros/image.html.twig" as image %}
 {% import "macros/alertes.html.twig" as alerte %}
+{% import "macros/roles.html.twig" as roles %}
+{% import "macros/link.html.twig" as link %}
+
 
 {% extends "admin/base.html.twig" %}
 
 {% block title %}Profile utilisateur{% endblock %}
 
 {% block breadcrumb %}
-    {{ utils.breadcrumb('Profile',[
-        {
-            path:'article_index',
-            name:'Manage Articles'
-        }
-    ])}}
+    {{ utils.breadcrumb('Profile')}}
 {% endblock %}
 
 {% block body %}
@@ -25,18 +23,15 @@
       <div class="card card-primary card-outline">
         <div class="card-body box-profile">
           <div class="text-center">
-            {% if app.user.personne.avatar is not null %}
-              <img class="profile-user-img img-fluid img-circle"
-                  src="{{ asset('img/user/' ~ app.user.personne.avatar ) }}"
+            <img class="profile-user-img img-fluid img-circle"
+                  src="{{ asset('img/user/' ~ app.user.personne.avatar|default('empty.png') ) }}"
                   alt="{{ app.user.personne.firstName ~ ' ' ~ app.user.personne.lastName  }}">
-              {% else %}
-              <img class="profile-user-img img-fluid img-circle"
-                  src="{{ asset('img/icons/avatar.png') }}"
-                  alt="">
-            {% endif %}
           </div>
-          <h3 class="profile-username text-center">{{app.user.personne.lastName | title}} {{app.user.personne.firstname | title }}</h3>
-          <a href="{{ path('profile_edit', {id: app.user.id }) }}" class="btn btn-success btn-block"><b>Modifier <i class="fas fa-pencil-alt"></i> </b></a>
+          <h3 class="profile-username text-center">{{app.user.personne.lastName | title}} {{app.user.personne.firstname | title }} <a href="{{ path('profile_edit') }}"><i class="fas fa-pencil-alt text-success"></i></a> </h3>
+          <hr>
+          <p>{{app.user.email}} {{link.pencil(path('profile_edit_email'))}} <br>
+            Modifier le mot de passe {{link.pencil()}}
+          </p>
         </div>
         <!-- /.card-body -->
       </div>
@@ -51,14 +46,15 @@
         <div class="card-body">
           <strong><i class="fas fa-map-marker-alt mr-1"></i> Location</strong>
 
-          <p class="text-muted">Malibu, California</p>
+          <p class="text-muted">{{ app.user.adresse|default('adresse manquante')}}</p>
 
           <hr>
 
-          <strong><i class="fas fa-pencil-alt mr-1"></i> Roles</strong>
-
+          <strong><i class="fas fa-pencil-alt mr-1"></i> Compte</strong>
           <p class="text-muted">
-            <span class="tag tag-danger">UI Design</span>
+          {% for item in app.user.roles %}
+            <span class="tag tag-danger">{{ roles.role(item) }}  </span>
+          {% endfor %}
           </p>
          </div>
         <!-- /.card-body -->
