--- a/templates/leSekoya/home/index.html.twig
+++ b/templates/leSekoya/home/index.html.twig
@@ -63,7 +63,7 @@
         <h2>{{ 'Trending <span class="section-intro__style">Product</span>'|trans|raw}}</h2>
       </div>
       <div class="row">
-        {% for item in top_articles %}
+        {% for item in articles.tendances %}
         <div class="col-md-6 col-lg-4 col-xl-3">
           {{ include ('leSekoya/shop/_article.html.twig') }}
         </div>
@@ -99,7 +99,7 @@
         <h2>{{'Best <span class="section-intro__style">Sellers</span>'|trans|raw}}</h2>
       </div>
       <div class="owl-carousel owl-theme" id="bestSellerCarousel">
-        {% for item in rand_articles %}
+        {% for item in articles.rand %}
         {{ include ('leSekoya/shop/_article.html.twig',{class:'col-xl-3'}) }}
         {% endfor %}
       </div>
