--- a/templates/registration/_form.html.twig
+++ b/templates/registration/_form.html.twig
@@ -14,11 +14,14 @@
                 <div class="col-md-6 form-group">
                     {{form_row(registrationForm.personne.lastName)}}
                 </div>
-                <div class="col-md-6 form-group">
+                <div class="col-md-4 form-group">
                     {{form_row(registrationForm.phone_number)}}
                 </div>
-                <div class="col-md-6 form-group">
+                <div class="col-md-4 form-group">
                     {{form_row(registrationForm.email)}}
+                </div>
+                <div class="col-md-4 form-group">
+                    {{form_row(registrationForm.adresse)}}
                 </div>
                 <div class="form-group col-6">
                     {{ form_row(registrationForm.password)}}
