--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,6 +1,6 @@
 {% extends 'leSekoya/base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}{{'Reset your password'|trans}}{% endblock %}
 
 {% block body %}
 <nav class="breadcrumb">
@@ -8,8 +8,7 @@
    <span class="breadcrumb-item active">{{'Reset'|trans}}</span>
 </nav>
 <div class="container my-5">
-        <h1>Reset your password</h1>
-
+    <h1>{{'Reset your password'|trans}}</h1>
     {{ form_start(resetForm) }}
         {{ form_row(resetForm.plainPassword) }}
         <button class="btn btn-primary">Reset password</button>
