--- a/templates/email/base.html.twig
+++ b/templates/email/base.html.twig
@@ -502,7 +502,7 @@
                                                                             <td align="left" class="textContent">
                                                                                 <div
                                                                                     style="font-family:Helvetica,Arial,sans-serif;font-size:13px;color:#828282;text-align:center;line-height:120%;">
-                                                                                    '.$introduction.'
+                                                                                    Boutique de vente en ligne
                                                                                 </div>
                                                                             </td>
                                                                         </tr>
