--- a/templates/leSekoya/home/index.html.twig
+++ b/templates/leSekoya/home/index.html.twig
@@ -9,7 +9,7 @@
       <div class="row no-gutters align-items-center pt-60px">
         <div class="col-5 d-none d-sm-block">
           <div class="hero-banner__img">
-            <img class="img-fluid" src="img/home/hero-banner.png" alt="">
+            <img class="img-fluid" src="{{ asset('img/home/hero-banner.png') }}" alt="">
           </div>
         </div>
         <div class="col-sm-7 col-lg-6 offset-lg-1 pl-4 pl-md-5 pl-lg-0">
@@ -31,21 +31,21 @@
   <section class="section-margin mt-0">
     <div class="owl-carousel owl-theme hero-carousel">
       <div class="hero-carousel__slide">
-        <img src="img/home/hero-slide1.png" alt="" class="img-fluid">
+        <img src="{{ asset('img/home/hero-slide1.png') }}" alt="" class="img-fluid">
         <a href="#" class="hero-carousel__slideOverlay">
           <h3>Wireless Headphone</h3>
           <p>Accessories Item</p>
         </a>
       </div>
       <div class="hero-carousel__slide">
-        <img src="img/home/hero-slide2.png" alt="" class="img-fluid">
+        <img src="{{ asset('img/home/hero-slide2.png') }}" alt="" class="img-fluid">
         <a href="#" class="hero-carousel__slideOverlay">
           <h3>Wireless Headphone</h3>
           <p>Accessories Item</p>
         </a>
       </div>
       <div class="hero-carousel__slide">
-        <img src="img/home/hero-slide3.png" alt="" class="img-fluid">
+        <img src="{{ asset('img/home/hero-slide3.png') }}" alt="" class="img-fluid">
         <a href="#" class="hero-carousel__slideOverlay">
           <h3>Wireless Headphone</h3>
           <p>Accessories Item</p>
