--- a/templates/leSekoya/shop/show.html.twig
+++ b/templates/leSekoya/shop/show.html.twig
@@ -342,7 +342,7 @@
 			<p>Popular Item in the market</p>
 			<h2>Top <span class="section-intro__style">Product</span></h2>
 		</div>
-		    {% include "leSekoya/shop/_top_article.html.twig" %}
+		    {# {% include "leSekoya/shop/_top_article.html.twig" %} #}
 	</div>
 </section>
 <!--================ end related Product area =================-->
